@@ -1,5 +1,8 @@
 2008-07-22  Andreas Kupries  <andreask@activestate.com>
 
+	* generic/tclCompile.c: Made the new TclEnterCmdWordIndex
+	* generic/tclCompile.h: static.
+
 	* generic/tclBasic.c: Reworked the handling of bytecode literals
 	* generic/tclCompile.c: for #280 to fix the abysmal performance
 	* generic/tclCompile.h: for deep recursion, replaced the linear
